# RIGID

./: README.md  RIGID-140k-Faces.ipynb  RIGID-140k-Real-and-Fake-Faces.ipynb  RIGID-AIGC-Detection-Benchmark.ipynb  RIGID-AIGC-Detection.ipynb  RIGID-MS-COCOAI.ipynb  RIGID.ipynb  main.py  pyproject.toml
